--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -5,6 +5,15 @@ owner: Release Engineering
 
 ## <a id='releases'></a> Releases
 
+### <a id='1-9-1'></a> v1.9.1
+
+**Release Date**: January 13, 2021
+
+#### Dependency updates
+
+* Bump [github.com/onsi/gomega](https://github.com/onsi/gomega) from 1.10.3 to 1.10.4
+* Bump [gopkg.in/yaml.v2](https://gopkg.in/yaml.v2) from 2.3.0 to 2.4.0
+
 ### <a id='1-9-0'></a> v1.9.0
 
 **Release Date**: December 7, 2020
