--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -9,10 +9,12 @@ owner: Release Engineering
 
 **Release Date**: January 13, 2021
 
-#### Dependency updates
+#### Improvements
 
-* Bump [github.com/onsi/gomega](https://github.com/onsi/gomega) from 1.10.3 to 1.10.4
-* Bump [gopkg.in/yaml.v2](https://gopkg.in/yaml.v2) from 2.3.0 to 2.4.0
+* **gomega:** Updated to v1.10.4.
+For more information, see [gomega](https://github.com/onsi/gomega).
+* **gopkg.in:** Updated to v2.4.0.
+For more information, see [gopkg.in/yaml.v2](https://gopkg.in/yaml.v2).
 
 ### <a id='1-9-0'></a> v1.9.0
 
