--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,13 +11,13 @@ owner: Release Engineering
 
 #### Maintenance Changes
 
-* Bump github.com/aws/aws-sdk-go in /s3-config-validator/src
-* Bump github.com/maxbrunsfeld/counterfeiter/v6
-* Bump github.com/onsi/ginkgo in /s3-config-validator/src
-* Bump github.com/onsi/ginkgo from 1.15.2 to 1.16.0
-* Bump github.com/aws/aws-sdk-go in /s3-config-validator/src
-* Bump github.com/maxbrunsfeld/counterfeiter/v6
-* Replace `build-binaries` with working version
+* Updated github.com/aws/aws-sdk-go in /s3-config-validator/src
+* Updated github.com/maxbrunsfeld/counterfeiter/v6
+* Updated github.com/onsi/ginkgo in /s3-config-validator/src
+* Updated github.com/onsi/ginkgo from v1.15.2 to v1.16.0
+* Updated github.com/aws/aws-sdk-go in /s3-config-validator/src
+* Updated github.com/maxbrunsfeld/counterfeiter/v6
+* Replaced `build-binaries` with working version
 
 
 ### <a id='1-9-5'></a> v1.9.5
