[#177630555] Added missing info

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -9,12 +9,15 @@ owner: Release Engineering
 
 **Release Date**: April 5, 2021
 
-#### Maintenance Changes
+#### Features
 
-* Updated github.com/aws/aws-sdk-go in /s3-config-validator/src
-* Updated github.com/maxbrunsfeld/counterfeiter/v6
-* Updated github.com/onsi/ginkgo in /s3-config-validator/src
-* Updated github.com/onsi/ginkgo from v1.15.2 to v1.16.0
+* Updated `aws-sdk-go` v1.38.1 to v1.38.12
+For more information, see the [aws](https://github.com/aws/aws-sdk-go) repository in GitHub.
+* Updated `counterfeiter` v6.3.0 to v6.4.1
+For more information, see the [counterfeiter](https://github.com/maxbrunsfeld/counterfeiter)
+repository in GitHub.
+* Updated `gingko` from v1.15.2 to v1.16.0
+For more information, see the [gingko](https://github.com/onsi/ginkgo) repository in GitHub.
 
 
 ### <a id='1-9-5'></a> v1.9.5
