Edit release notes [#177801382]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -7,28 +7,34 @@ owner: Release Engineering
 
 ### <a id='1-9-7'></a> v1.9.7
 
-**Release Date**: April 16, 2021
+**Release Date**: April 19, 2021
 
 #### Maintenance Changes
 
-* Bumps github.com/aws/aws-sdk-go from 1.38.12 to 1.38.21.
-* Bumps github.com/cloudfoundry/socks5-proxy from 0.2.0 to 0.2.1.
-* Bumps github.com/onsi/ginkgo from 1.16.0 to 1.16.1.
+* **aws-sdk-go:** Updated to v1.38.21.
+For more information, see the [aws-sdk-go](https://github.com/aws/aws-sdk-go) repository in GitHub.
 
+* **socks5-proxy:** Updated to v0.2.1.
+For more information, see the [socks5-proxy](https://github.com/cloudfoundry/socks5-proxy) repository in GitHub.
+
+* **ginkgo:** Updated to v1.16.1.
+For more information, see the [gingko](https://github.com/onsi/ginkgo) repository in GitHub.
 
 
 ### <a id='1-9-6'></a> v1.9.6
 
 **Release Date**: April 5, 2021
 
-#### Features
+#### Maintenance Changes
 
-* Updated `aws-sdk-go` v1.38.1 to v1.38.12
-For more information, see the [aws](https://github.com/aws/aws-sdk-go) repository in GitHub.
-* Updated `counterfeiter` v6.3.0 to v6.4.1
+* **aws-sdk-go:** Updated to v1.38.12.
+For more information, see the [aws-sdk-go](https://github.com/aws/aws-sdk-go) repository in GitHub.
+
+* **counterfeiter:** Updated to v6.4.1.
 For more information, see the [counterfeiter](https://github.com/maxbrunsfeld/counterfeiter)
 repository in GitHub.
-* Updated `gingko` from v1.15.2 to v1.16.0
+
+* **gingko:** Updated to v1.16.0.
 For more information, see the [gingko](https://github.com/onsi/ginkgo) repository in GitHub.
 
 
