Add release notes for 1.9.9
[#177967869]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -4,6 +4,19 @@ owner: Release Engineering
 ---
 
 ## <a id='releases'></a> Releases
+
+### <a id='1-9-9'></a> v1.9.9
+
+**Release Date**: July 8, 2021
+
+#### Maintenance Changes
+
+* Various internal technical improvements (CI, etc).
+
+#### Dependencies
+
+* **aws-sdk-go:** Updated to 1.39.0.<br>For more information, see the [github.com/aws/aws-sdk-go](https://github.com/aws/aws-sdk-go).
+
 ### <a id='1-9-8'></a> v1.9.8
 
 **Release Date**: July 7, 2021
