--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -10,15 +10,15 @@ owner: Release Engineering
 
 #### Maintenance Changes
 
-* Various internal improvements (READMEs, CI, etc)
+* **Various internal improvements:** These include updates to READMEs and Continuous Integration.
 
 #### Dependencies
 
-* **aws-sdk-go:** Updated to 1.38.70.<br>For more information, see the [github.com/aws/aws-sdk-go](https://github.com/aws/aws-sdk-go).
-* **bosh-utils:** Updated to 0.0.263.<br>For more information, see the [github.com/cloudfoundry/bosh-utils](https://github.com/cloudfoundry/bosh-utils).
-* **socks5-proxy:** Updated to 0.2.9.<br>For more information, see the [github.com/cloudfoundry/socks5-proxy](https://github.com/cloudfoundry/socks5-proxy).
-* **ginkgo:** Updated to 1.16.4.<br>For more information, see the [github.com/onsi/ginkgo](https://github.com/onsi/ginkgo).
-* **gomega:** Updated to 1.13.0.<br>For more information, see the [github.com/onsi/gomega](https://github.com/onsi/gomega).
+* **aws-sdk-go:** Updated to v1.38.70.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go) in GitHub.
+* **bosh-utils:** Updated to v0.0.263.<br>For more information, see [bosh-utils](https://github.com/cloudfoundry/bosh-utils) in GitHub.
+* **socks5-proxy:** Updated to v0.2.9.<br>For more information, see [socks5-proxy](https://github.com/cloudfoundry/socks5-proxy) in GitHub.
+* **ginkgo:** Updated to v1.16.4.<br>For more information, see [ginkgo](https://github.com/onsi/ginkgo) in GitHub.
+* **gomega:** Updated to v1.13.0.<br>For more information, see [gomega](https://github.com/onsi/gomega) in GitHub.
 
 ### <a id='1-9-7'></a> v1.9.7
 
