Clean release notes up
[#177967869]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,14 +11,7 @@ owner: Release Engineering
 
 #### Maintenance Changes
 
-* Add release version on docs PR
-* Extract OSL request task on its own job
-* Merge pull request #205 from cloudfoundry-incubator/dependabot/go_modules/github.com/cloudfoundry/bosh-utils-0.0.264
-* Merge pull request #207 from cloudfoundry-incubator/dependabot/go_modules/github.com/onsi/gomega-1.14.0
-* Merge pull request #208 from cloudfoundry-incubator/dependabot/go_modules/s3-config-validator/src/github.com/aws/aws-sdk-go-1.39.1
-* Merge pull request #210 from cloudfoundry-incubator/dependabot/go_modules/s3-config-validator/src/github.com/aws/aws-sdk-go-1.39.2
-* Merge pull request #211 from cloudfoundry-incubator/177967869-extract-osl-task-into-a-separate-job
-* Move story creation step down when releasing
+* Internal technical improvements (CI, etc).
 
 #### Dependencies
 
