Edit PRs #92 and #94 [#178811015]

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,13 +11,13 @@ owner: Release Engineering
 
 #### Maintenance Changes
 
-* Internal technical improvements (CI, etc).
+* **Various technical improvements:** These include updates to Continuous Integration.
 
 #### Dependencies
 
-* **aws-sdk-go:** Updated to 1.39.1.<br>For more information, see the [github.com/aws/aws-sdk-go](https://github.com/aws/aws-sdk-go).
-* **socks5-proxy:** Updated to 0.2.12.<br>For more information, see the [github.com/cloudfoundry/socks5-proxy](https://github.com/cloudfoundry/socks5-proxy).
-* **gomega:** Updated to 1.14.0.<br>For more information, see the [github.com/onsi/gomega](https://github.com/onsi/gomega).
+* **aws-sdk-go:** Updated to v1.39.1.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go) in GitHub.
+* **socks5-proxy:** Updated to v0.2.12.<br>For more information, see [socks5-proxy](https://github.com/cloudfoundry/socks5-proxy) in GitHub.
+* **gomega:** Updated to v1.14.0.<br>For more information, see [gomega](https://github.com/onsi/gomega) in GitHub.
 
 ### <a id='1-9-9'></a> v1.9.9
 
@@ -25,11 +25,11 @@ owner: Release Engineering
 
 #### Maintenance Changes
 
-* Various internal technical improvements (CI, etc).
+* **Various technical improvements:** These include updates to Continuous Integration.
 
 #### Dependencies
 
-* **aws-sdk-go:** Updated to 1.39.0.<br>For more information, see the [github.com/aws/aws-sdk-go](https://github.com/aws/aws-sdk-go).
+* **aws-sdk-go:** Updated to v1.39.0.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go) in GitHub.
 
 ### <a id='1-9-8'></a> v1.9.8
 
