--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -11,13 +11,13 @@ owner: Release Engineering
 
 #### Maintenance Changes
 
-* Internal technical improvements (CI, etc).
+* **Various technical improvements:** These include updates to Continuous Integration.
 
 #### Dependencies
 
-* **aws-sdk-go:** Updated to v1.39.2.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go).
-* **bosh-utils:** Updated to v0.0.264.<br>For more information, see [bosh-utils](https://github.com/cloudfoundry/bosh-utils).
-* **gomega:** Updated to v1.14.0.<br>For more information, see [gomega](https://github.com/onsi/gomega).
+* **aws-sdk-go:** Updated to v1.39.2.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go) in GitHub.
+* **bosh-utils:** Updated to v0.0.264.<br>For more information, see [bosh-utils](https://github.com/cloudfoundry/bosh-utils) in GitHub.
+* **gomega:** Updated to v1.14.0.<br>For more information, see [gomega](https://github.com/onsi/gomega) in GitHub.
 
 
 ### <a id='1-9-10'></a> v1.9.10
