--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -4,21 +4,21 @@ owner: Release Engineering
 ---
 
 ## <a id='releases'></a> Releases
+
 ### <a id='1-9-12'></a> v1.9.12
 
 **Release Date**: September 16, 2021
 
 #### Maintenance Changes
 
-* Various internal CI improvements
+* **Various technical improvements:** These include updates to Continuous Integration.
 
 #### Dependencies
 
-* **aws-sdk-go:** Updated to v1.40.17.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go).
-* **bosh-utils:** Updated to v0.0.274.<br>For more information, see [bosh-utils](https://github.com/cloudfoundry/bosh-utils).
-* **socks5-proxy:** Updated to v0.2.19.<br>For more information, see [socks5-proxy](https://github.com/cloudfoundry/socks5-proxy).
-* **gomega:** Updated to v1.16.0.<br>For more information, see [gomega](https://github.com/onsi/gomega).
-
+* **aws-sdk-go:** Updated to v1.40.17.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go) in GitHub.
+* **bosh-utils:** Updated to v0.0.274.<br>For more information, see [bosh-utils](https://github.com/cloudfoundry/bosh-utils) in GitHub.
+* **socks5-proxy:** Updated to v0.2.19.<br>For more information, see [socks5-proxy](https://github.com/cloudfoundry/socks5-proxy) in GitHub.
+* **gomega:** Updated to v1.16.0.<br>For more information, see [gomega](https://github.com/onsi/gomega) in GitHub.
 
 
 ### <a id='1-9-11'></a> v1.9.11
