Add known issue

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -8,6 +8,9 @@ owner: Release Engineering
 
 **Release Date**: September 20, 2021
 
+#### Known issues
+* `bbr -v` displays an RC version instead of a final ([#287](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/287))
+
 #### Maintenance Changes
 
 * **Various technical improvements:** These include updates to Continuous Integration.
