[#179648681]adjust rel notes for v1.9.13

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -8,17 +8,19 @@ owner: Release Engineering
 
 **Release Date**: September 20, 2021
 
-#### Known issues
-* `bbr -v` displays an RC version instead of a final ([#287](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/287))
-
 #### Maintenance Changes
 
 * **Various technical improvements:** These include updates to Continuous Integration.
 
 #### Dependencies
 
-* **aws-sdk-go:** Updated to v1.40.45.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go).
+* **aws-sdk-go:** Updated to v1.40.45.<br>For more information, see [aws-sdk-go](https://github.com/aws/aws-sdk-go) in GitHub.
 
+#### Known issues
+
+* **The `bbr -v` command displays a release candidate (RC) version instead of a final (GA) version:**
+  For more information, see [bbr -v displays an RC version #287](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/287)
+  in GitHub.
 
 
 ### <a id='1-9-12'></a> v1.9.12
