Clean up release notes

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -8,16 +8,14 @@ owner: Release Engineering
 
 **Release Date**: September 21, 2021
 
+#### Resolved Issues
+* `bbr -v` now displays final version
+  For more information, see [bbr -v displays an RC version #287](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/287)
+  in GitHub.
+
 #### Maintenance Changes
 
-* Merge pull request #284 from cloudfoundry-incubator/dependabot/go_modules/github.com/cloudfoundry/bosh-utils-0.0.275
-* Merge pull request #286 from cloudfoundry-incubator/dependabot/go_modules/s3-config-validator/src/github.com/aws/aws-sdk-go-1.40.45
-* [bug] `bbr -v` now displays final version
-* [ci] Fix homebrew upload job
-* [ci] Fix request OSL job
-* [ci] Fix tanzunet upload
-* [ci] build-rc job bumps RC
-* [ci] merge promote and github release jobs
+* **Various technical improvements:** These include updates to Continuous Integration.
 
 #### Dependencies
 
