--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -8,14 +8,16 @@ owner: Release Engineering
 
 **Release Date**: September 21, 2021
 
-#### Resolved Issues
-* `bbr -v` now displays final version
-  For more information, see [bbr -v displays an RC version #287](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/287)
-  in GitHub.
-
 #### Maintenance Changes
 
 * **Various technical improvements:** These include updates to Continuous Integration.
+
+#### Resolved Issues
+
+* **The `bbr -v` command displays the correct final (GA) version:**
+  For more information, see [bbr -v displays an RC version #287](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/287)
+  in GitHub.
+
 
 #### Dependencies
 
