Clean release notes up

--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -8,12 +8,15 @@ owner: Release Engineering
 
 **Release Date**: September 23, 2021
 
+#### Resolved Issues
+
+* **The bbr tarball now contains the `releases/` folder as before**
+  For more information, see [bbr tarball does not contain releases/ folder #289](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/289)
+  in GitHub.
+
 #### Maintenance Changes
 
-* Merge pull request #290 from cloudfoundry-incubator/179684003-fix-missing-folder-in-tarball
-* Merge pull request #291 from cloudfoundry-incubator/dependabot/go_modules/s3-config-validator/src/github.com/aws/aws-sdk-go-1.40.47
-* [ci] Place the releases/ folder back in tarball
-* [ci] build-rc job bumps RC
+* **Various technical improvements:** These include updates to Continuous Integration.
 
 #### Dependencies
 
