--- a/bbr-rn.html.md.erb
+++ b/bbr-rn.html.md.erb
@@ -8,15 +8,16 @@ owner: Release Engineering
 
 **Release Date**: September 23, 2021
 
-#### Resolved Issues
-
-* **The bbr tarball now contains the `releases/` folder as before**
-  For more information, see [bbr tarball does not contain releases/ folder #289](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/289)
-  in GitHub.
-
 #### Maintenance Changes
 
 * **Various technical improvements:** These include updates to Continuous Integration.
+
+#### Resolved Issues
+
+* **The bbr tarball is now structured using the `releases/` folder:**
+  This folder was not used in v1.9.13 and v1.9.14 but was present in earlier versions.
+  For more information, see [bbr tarball does not contain releases/ folder #289](https://github.com/cloudfoundry-incubator/bosh-backup-and-restore/issues/289)
+  in GitHub.
 
 #### Dependencies
 
