Update table with new formatting.

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -31,12 +31,14 @@ Configure your jumpbox to meet the following requirements:
 
 Consult the following table for more information about the network access permissions required by BBR.
 
-<table>
+<table class="table">
+<thead>
   <tr>
     <th>VM</th>
     <th>Default Port</th>
     <th>Description</th>
   </tr>
+  </thead>
   <tr>
     <td>BOSH Director</td>
     <td>25555</td>
