Update with sentence style capitalization.

--- a/installing.html.md.erb
+++ b/installing.html.md.erb
@@ -35,7 +35,7 @@ Consult the following table for more information about the network access permis
 <thead>
   <tr>
     <th>VM</th>
-    <th>Default Port</th>
+    <th>Default port</th>
     <th>Description</th>
   </tr>
   </thead>
@@ -45,7 +45,7 @@ Consult the following table for more information about the network access permis
     <td>BBR interacts with the BOSH Director API.</td>
   </tr>
   <tr>
-    <td>Deployed Instances</td>
+    <td>Deployed instances</td>
     <td>22</td>
     <td>BBR uses SSH to orchestrate the backup on the instances.</td>
   </tr>
