--- a/backup.html.md.erb
+++ b/backup.html.md.erb
@@ -109,7 +109,7 @@ To connect with `BOSH_ALL_PROXY`, follow one of the below procedures:
 
 ## <a id='back-up-director'></a> Back Up a BOSH Director
 
-1. Run the BBR pre-backup check to confirm that your BOSH Director is reachable and can therefore be backed up with BBR.
+1. Run the BBR pre-backup check to confirm that your BOSH Director is reachable, and can therefore be backed up with BBR.
 
     ```
     bbr director \
@@ -135,7 +135,7 @@ To connect with `BOSH_ALL_PROXY`, follow one of the below procedures:
     </pre>
 
 <p class="note">
-  <strong>Note:</strong> The pre-backup check cannot check for available disk space, ongoing network connections (for example to databases), correctly configured credentials, or other circumstances which might impede a successful backup. It only checks that we can connect to the director.
+  <strong>Note:</strong> The pre-backup check cannot check for available disk space, ongoing network connections (for example, to databases), correctly configured credentials, or other circumstances that might impede a successful backup. It only checks that we can connect to the director.
 </p>
 
 
@@ -237,7 +237,7 @@ that you can back up with BBR:
     </pre>
 
 <p class="note">
-  <strong>Note:</strong> The pre-backup check cannot check for available disk space, ongoing network connections (for example to databases), correctly configured credentials, or other circumstances which might impede a successful backup. It only checks that we can connect to the director, and the VMs of our deployment.
+  <strong>Note:</strong> The pre-backup check cannot check for available disk space, ongoing network connections (for example, to databases), correctly configured credentials, or other circumstances that might impede a successful backup. It only checks that we can connect to the director, and the VMs of our deployment.
 </p>
 
 1. If the pre-backup check command fails:
